--- a/html_advanced/5-index.html
+++ b/html_advanced/5-index.html
@@ -16,9 +16,9 @@
     <section>Services section</section>
     <section>Works section</section>
     <section>About section</section>
-    <section>Hero section</section>
-    <section>Hero section</section>
-    <section>Hero section</section>
+    <section>Latest news section</section>
+    <section>Testimonials section</section>
+    <section>Contact section</section>
 </main>
 
 <footer>Footer</footer>
