--- a/html_advanced/35-index.html
+++ b/html_advanced/35-index.html
@@ -14,10 +14,7 @@
 <header>
     <div>
         <div>
-            <a href="/">
-                <span>
-                    <img src="logo-black.png" alt="Techium logo" width="160" height="40">
-                </span>
+            <a href="/"><img src="logo-black.png" alt="Techium logo" width="160" height="40">
             </a>
         </div>
         <nav>
