--- a/html_advanced/36-index.html
+++ b/html_advanced/36-index.html
@@ -122,7 +122,7 @@
                     <p>Career</p>
                     <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
                     <div>
-                        <a href="/"><img src="images/pic-blog-01.jpg" alt="" width="305" height="205">
+                        <img src="images/pic-blog-01.jpg" alt="" width="305" height="205">
                     </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                     <small>By Kelly D.</small>
@@ -131,7 +131,7 @@
                     <p>Digital Life</p>
                     <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
                     <div>
-                        <a href="/"><img src="images/pic-blog-02.jpg" alt="" width="305" height="205">
+                        <img src="images/pic-blog-02.jpg" alt="" width="305" height="205">
                     </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
                     <small>By William A.</small>
@@ -140,7 +140,7 @@
                     <p>Social</p>
                     <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
                     <div>
-                        <a href="/"><img src="images/pic-blog-03.jpg" alt="" width="305" height="205">
+                        <img src="images/pic-blog-03.jpg" alt="" width="305" height="205">
                     </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
                     <small>By Frances J.</small>
@@ -158,7 +158,7 @@
             </header>
             <div>
                 <article>
-                    <a href="/"><img src="images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100px" height="100px">
+                    <img src="images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100px" height="100px">
                     <blockquote>
                         <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!
                             <cite>Yuri Y.</cite>
@@ -166,7 +166,7 @@
                     </blockquote>
                 </article>
                 <article>
-                    <a href="/"><img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100px" height="100px">
+                    <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100px" height="100px">
                     <blockquote>
                         <p>Thank you so much for your help. Techium company is awesome!
                             <cite>Dorrie S.</cite>
@@ -174,7 +174,7 @@
                     </blockquote>
                 </article>
                 <article>
-                    <a href="/"><img src="images/pic-person-03.jpg" alt="Sven H. avatar" width="100px" height="100px">
+                    <img src="images/pic-person-03.jpg" alt="Sven H. avatar" width="100px" height="100px">
                     <blockquote>
                         <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.
                             <cite>Sven H.</cite>
