--- a/form/02-article.html
+++ b/form/02-article.html
@@ -148,8 +148,8 @@
               <p>All fields are required.</p>
             </header>
             <form action="#" method="post">
-              <fieldset class="visually-hidden">
-                <legend>Your personal information</legend>
+              <fieldset>
+                <legend class="visually-hidden">Your personal information</legend>
                 <div class="form-group  col-1-2">
 
                 </div>
@@ -160,8 +160,8 @@
 
                 </div>
               </fieldset>
-              <fieldset class="visually-hidden">
-                <legend>Your comment</legend>
+              <fieldset>
+                <legend class="visually-hidden">Your comment</legend>
                 <div class="form-group  col-2-3">
 
                 </div>
@@ -169,7 +169,7 @@
 
                 </div>
                 <div class="form-group">
-                  
+
                 </div>
               </fieldset>
             </form>
