--- a/form/03-article.html
+++ b/form/03-article.html
@@ -160,11 +160,13 @@
                   <label for="your-last-name">Last Name</label>
                   <div class="form-field">
                     <span class="form-field-container"></span>
+                  </div>
                 </div>
                 <div class="form-group col-2-3">
                   <label for="your-email">Email</label>
                   <div class="form-field">
                     <span class="form-field-container"></span>
+                  </div>
                 </div>
               </fieldset>
               <fieldset>
@@ -179,6 +181,7 @@
                   <label for="your-comment">Comment</label>
                   <div class="form-field">
                     <span class="form-field-container"></span>
+                  </div>
                 </div>
                 <div class="form-group">
                   <button class="button button-primary">Post my comment</button>
