--- a/form/04-article.html
+++ b/form/04-article.html
@@ -170,7 +170,7 @@
                   <label for="your-email">Email</label>
                   <div class="form-field">
                     <span class="form-field-container">
-                      <input type="text" id="your-email" name="your-email" placeholder="e.g. youremail@gmail.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" maxlength="55" autocomplete="on" accesskey="e" required> 
+                      <input type="email" id="your-email" name="your-email" placeholder="e.g. youremail@gmail.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" maxlength="55" autocomplete="on" accesskey="e" required> 
                     </span>
                   </div>
                 </div>
