--- a/accessibility/fix-a11y/08-index.html
+++ b/accessibility/fix-a11y/08-index.html
@@ -27,7 +27,7 @@
         </div>
       </div>
     </div>
-    <div>Homepage</div>
+    <h1>Homepage</h1>
     <div class="section">
       <div class="container">
         <div class="row">
